--- a/help/css/styles.css
+++ b/help/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1e262c !important;
+    background-color: #07080b !important;
     color           : #fff !important;
     font-family     : "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif !important;
 }
